--- a/report.Rmd
+++ b/report.Rmd
@@ -156,6 +156,7 @@ S.std = round(cov(std.crime_mat), 2)
 S.std
 ```
 #### Answers and comments:
+Note that the sample correlation matrix is already standardized as it is equal to the standardized sample covariance matrix. Also note the high correlation between murder with pctmetro, poverty, and single versus the strong negative correlation between murder with pcths, and pctwhite. These same relationships are shown through the covariance matrix also.
 
 
 ## Part g
@@ -169,6 +170,8 @@ S.inv = round(solve(S), 3)
 S.inv
 ```
 #### Answers and comments:
+Since the GSV does not equal zero (GSV = 649,502,892), S is invertible. Since this is a very large number, it shows that the variation in the data is high (the data is widely dispersed). 
+The inverse covariance matrix once again shows the correlations between murder and other variables. Murder with pctwhite and pctmetro are showing very low correlation while murder with single is showing a strong correlation.
 
 
 ## Part h
@@ -213,7 +216,7 @@ S.inv.decomp
   # we can assuredly say that the covariance matrix (S) is a positive definite (PD) matrix.
 ```
 #### Answers and comments:
-#We can see that creating P by combining the eigenvectors and multiplying that P' results in the identity matrix. When comparing the original covariance matrix and the spectral decomposition matrix we can see that the values of the two matrices are very close. When we calculate the determinant in this step we get 650566462 which is very close to the value of 650566462 that we get when we calculate the determinant in step g. A matrix is a PD matrix if all of its eigenvalues > 0. As seen in the beginning of part h, in calculating the eigenvalues, we found eigenvalues of 536.70, 210.98, 43.62, 33.20, 4.09, and 0.97. All of these eigenvalues are greater than 0. Because of the, we can say that the covariance matrix (S) is a positive definite (PD) matrix.
+We can see that creating P by combining the eigenvectors and multiplying that P' results in the identity matrix. When comparing the original covariance matrix and the spectral decomposition matrix we can see that the values of the two matrices are very close. When we calculate the determinant in this step we get 650566462 which is very close to the value of 650566462 that we get when we calculate the determinant in step g. A matrix is a PD matrix if all of its eigenvalues > 0. As seen in the beginning of part h, in calculating the eigenvalues, we found eigenvalues of 536.70, 210.98, 43.62, 33.20, 4.09, and 0.97. All of these eigenvalues are greater than 0. Because of the, we can say that the covariance matrix (S) is a positive definite (PD) matrix.
 
 
 ## Part i
