--- a/report.Rmd
+++ b/report.Rmd
@@ -269,14 +269,14 @@ cat(paste("Dimension of Lambda:", paste(dim(lambda), collapse = "x")), "\n")
 X = U%*%lambda%*%t(V)
 # Showing how this reconstruction it returns the original data (-with only floating point errors)
 cat("\nTotal overall difference between original crime_mat data and reconstructed data matrix with SVD: ",
-    max(abs(crime_mat-X)))
+    max(abs(crime_matrix-X)))
 r = dim(lambda)[1]-2
 lambda_r = lambda[1:r, 1:r]
 cat(paste("\n\nNew dimension of Lambda:", paste(dim(lambda_r), collapse = "x")))
 U_r = U[, 1:r]
 V_r = V[, 1:r]
 X_reduced_reconstruct = U_r %*% lambda_r %*% t(V_r)
-cat("\n\nTotal overall difference between original crime_mat data and reconstructed and p-2 reduced data matrix with SVD: ", max(abs(crime_mat-X_reduced_reconstruct)))
+cat("\n\nTotal overall difference between original crime_mat data and reconstructed and p-2 reduced data matrix with SVD: ", max(abs(crime_matrix-X_reduced_reconstruct)))
 ```
 #### Answers and comments:
 When computing the singular value decomposition on our crime_mat matrix we can notice that from lambda matrix printout, none of the values is 0 zero or close to zero. Because of that we can infer that none of the variables in crime_mat is a linear combination of other variables, and we should that reducing the rank it will cause a loss of important features
